# satellite_image_analyze

./: CMakeLists_DISPLAY.txt  CMakeLists_GEN.txt  LICENSE  README.md  display.cpp  display_gen_image.cpp  gen_image.cpp  main.cpp
Image/: Image.cpp  Image.hpp
Math/: Math.cpp  Math.hpp
Passport/: Passport.cpp  Passport.hpp
analyze/: CMakeLists.txt  analyze.cpp  display.py
approx/: CMakeLists.txt  display.py  leastSquares.cpp
display/: CMakeLists.txt  display_gen_image.cpp
fft/: CMakeLists.txt  fft.cpp  show.py
generate/: CMakeLists.txt  gen_image.cpp
inc/: Display.hpp  Image.hpp  Math.hpp  Passport.hpp  Satellite.hpp
src/: CMakeLists.txt  Display.cpp  Image.cpp  Math.cpp  Passport.cpp
variogram/: CMakeLists.txt  display.py  variogram.cpp
